Store address in db for quick lookup

--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -36,7 +36,7 @@
               <%= "#{m.lat}, #{m.lon}" %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-              <%= m.adres %>
+              <%= m.address %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
               <%= link_to "Wijzig", edit_sticker_path(m), class: button_classes %>
