--- a/app/views/stickers/edit.html.erb
+++ b/app/views/stickers/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Sticker aanpassen
+<% end %>
+
 <%= render layout: 'layouts/small_width' do %>
   <%= render 'form' %>
 <% end %>
