--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,7 +25,7 @@
           </svg>
         </span>
         <div class="content hidden absolute bg-gray-300 rounded p-2" data-popover-target="content">
-          <p>iCal links voor je API keys:</p>
+          <p>iCal-links voor je API-sleutels:</p>
           <ul role="list" class="divide-y divide-gray-200">
             <% current_user.api_keys.each do |ak| %>
               <li class="py-2">
