Changes to user settings

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -96,7 +96,7 @@
                  data-dropdown-leaving-class="ease-in duration-100"
                  data-dropdown-leave-timeout="300">
               <div>
-                <button type="button" class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:outline-none focus:ring-2 focus:ring-hamers-yellow-500" data-action="click->dropdown#toggle click@window->dropdown#hide" id="user-menu">
+                <button type="button" class="max-w-xs bg-gray-800 rounded-full flex items-center text-sm focus:ring-2 focus:ring-hamers-red-500" data-action="click->dropdown#toggle click@window->dropdown#hide">
                   <span class="sr-only">Open user menu</span>
                   <%= gravatar_for current_user, class: "h-8 w-8 rounded-full" %>
                 </button>
