--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,17 +34,6 @@
         </div>
       </div>
 
-      <% if current_user.admin? %>
-        <div class="p-2 sm:p-4 border-t border-gray-200">
-          <h4 class="mb-1">Wijzig lichting</h4>
-
-          <%= form_for @user, url: user_path(@user), html: { class: 'flex rounded-md' } do |f| %>
-            <%= f.number_field :batch, class: "focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm border-gray-300 rounded-l-md" %>
-            <%= f.submit "Opslaan", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
-          <% end %>
-        </div>
-      <% end %>
-
       <% if @missed_drinks&.any? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
           <h4>Gemiste dispuutsborrels</h4>
@@ -58,6 +47,7 @@
 
       <dl class="border-t border-gray-200 sm:divide-y sm:divide-gray-200">
         <% specs = {
+          "Lichting": @user.batch,
           "Aantal keer geciteerd": @user.quotes.count,
           "Aantal bieren gereviewd": @user.reviews.count,
           "Aantal stickers geplakt": @user.stickers.count,
