--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -2,11 +2,11 @@
 
   <% items = {
     Profiel: { path: edit_user_path(@user), icon: 'user' },
-    Foto: { path: "https://gravatar.com/emails", icon: 'user-circle' },
+    'Groepen': { path: edit_usergroups_user_path(@user), icon: 'user-group' },
     Wachtwoord: { path: edit_password_user_path(@user), icon: 'lock-closed' },
     '2FA': { path: edit_two_factor_user_path(@user), icon: 'sparkles' },
     'API-sleutels': { path: user_api_keys_path(@user), icon: 'key' },
-    'Groepen': { path: edit_usergroups_user_path(@user), icon: 'user-group' }
+    Foto: { path: "https://gravatar.com/emails", icon: 'user-circle' }
   } %>
 
   <div class="hidden md:block">
