Set white background for user image in stack (like on events page) and use frontend_helper

--- a/app/views/beers/table.html.erb
+++ b/app/views/beers/table.html.erb
@@ -65,7 +65,7 @@
                 <% if current_user&.active? %>
                   <% beer.reviews.each.each do |review| %>
                     <%= link_to review.user, class: "inline-block" do %>
-                      <%= gravatar_for review.user, class: "h-8 w-8 rounded-full ring-2 ring-white", alt: review.user.name %>
+                      <%= gravatar_for review.user, class: user_icon_stack_image(8), alt: review.user.name %>
                     <% end %>
                   <% end %>
                 <% else %>
