--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,7 @@
           "Aantal bieren gereviewd": @user.reviews.count,
           "Aantal stickers geplakt": @user.stickers.count,
           "Gemiddeld reviewcijfer": @user.average_review_grade,
-          "Aantal eventementen georganiseerd": @user.blogitems.count,
+          "Aantal evenementen georganiseerd": @user.blogitems.count,
           "Aantal blogposts geschreven": @user.blogitems.count,
           "Aantal vergaderingen bijgewoond": @user.meetings_attended.count,
           "Aantal vergaderingen voorgezeten": @user.meetings_chaired.count,
