Chug added to schema, params, routes, nav

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,6 +9,7 @@
   Log: { description: "Logs van de website", path: trail_path, icon: 'book-open' },
   Blog: { description: "Wat hebben we gedaan?", path: blogitems_path, icon: 'pencil-alt' },
   Paginas: { description: "Voor op de website", path: public_pages_path, icon: 'rss' },
+  Adtjes: { description: "Wie is de snelste?", path: chugs_path, icon: 'trending-up' },
 } %>
 
 <% user_items = {
