--- a/app/views/chug_types/index.html.erb
+++ b/app/views/chug_types/index.html.erb
@@ -39,7 +39,7 @@
                   <%= chug_type.name %>
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
-                  <%= chug_type.amount %>
+                  <%= chug_type.amount %> ml
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
                   <%= chug_type.chugs.count %>
