--- a/app/views/chugs/new.html.erb
+++ b/app/views/chugs/new.html.erb
@@ -1,13 +1,9 @@
 <% content_for :title do %>
-  Nieuwe uitvoering van <%= @recipe.name %>
+  Nieuwe Adt van <%= @chugtype.name %>
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
-  <aside class="ml-6 py-6 md:col-span-4 md:pr-6">
-    <%= @recipe.description %>
-  </aside>
-
-  <div class='md:col-span-8 md:pl-6 py-6'>
+  <div class='md:col-start-4 md:col-span-6 md:pl-6 py-6'>
     <%= render 'form' %>
   </div>
 </div>
