--- a/app/views/chugtypes/index.html.erb
+++ b/app/views/chugtypes/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :options do %>
   <div class="flex flex-row-reverse">
-    <%= link_to 'Nieuwe categorie', new_chug_type_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+    <%= link_to 'Nieuwe categorie', new_chugtype_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
   </div>
 <% end %>
 
@@ -33,22 +33,22 @@
             </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
-            <% @chug_types.each do |chug_type| %>
-              <tr onclick='Turbo.visit("<%= chug_type_path(chug_type) %>")' class="hover:bg-gray-50 cursor-pointer">
+            <% @chugtypes.each do |chugtype| %>
+              <tr onclick='Turbo.visit("<%= chugtype_path(chugtype) %>")' class="hover:bg-gray-50 cursor-pointer">
                 <td class="px-6 py-4 whitespace-nowrap">
-                  <%= chug_type.name %>
+                  <%= chugtype.name %>
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
-                  <%= chug_type.amount %> ml
+                  <%= chugtype.amount %> ml
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
-                  <%= chug_type.chugs.count %>
+                  <%= chugtype.chugs.count %>
                 </td>
                 <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
-                  <%= chug_type.created_at.strftime("%d-%m-%Y") %>
+                  <%= chugtype.created_at.strftime("%d-%m-%Y") %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                  <%= link_to chug_type, class: "float-right" do %>
+                  <%= link_to chugtype, class: "float-right" do %>
                     <%= heroicon('chevron-right', class_name: "flex-shrink-0 h-5 w-5 text-gray-400") %>
                   <% end %>
                 </td>
