Frontend all good now, old_show is trying to get it to work with a podium

--- a/app/views/chugs/_form.html.erb
+++ b/app/views/chugs/_form.html.erb
@@ -30,7 +30,7 @@
     <div style="margin-top: 1rem">
       Opmerkingen
     </div>
-    <%= f.text_field :comment, class: input_classes, required: true, minlength: 2, placeholder: "Opmerkingen" %>
+    <%= f.text_field :comment, class: input_classes, placeholder: "Opmerkingen" %>
 
     <div class="flex justify-center mt-5">
       <%= f.submit "Opslaan", class: submit_classes %>
