--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -68,6 +68,7 @@
         Wat een geluk, jij bent de eerste die een <%= @chugtype.name.downcase %> mag gaan adten!
       <% end %>
     </aside>
+    <%= render 'shared/pagination/default' %>
   </div>
 </div>
 
