--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,6 +57,7 @@
           "Aantal vergaderingen bijgewoond": @user.meetings_attended.count,
           "Aantal vergaderingen voorgezeten": @user.meetings_chaired.count,
           "Aantal vergaderingen genotuleerd": @user.meetings_minuted.count,
+          "Aantal bakken gevouwen": @user.chugs.count
         } %>
         <% specs.each do |name, value| %>
           <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
