Trying to get unique chugs per user as ActiveRecord

--- a/app/views/chugs/_form.html.erb
+++ b/app/views/chugs/_form.html.erb
@@ -19,7 +19,7 @@
       Tijd
     </div>
     <div class="grid grid-cols-6 gap-4">
-      <div>
+      <div class="">
         <%= f.number_field :secs, class: input_classes, required: true, placeholder: "s" %>
       </div>
       <div>
