--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -37,20 +37,44 @@
     <% end %>
   </aside>
 
-  <div class='md:col-span-8 md:pl-6 py-6'>
-    <aside class="ml-6 py-6 md:col-span-4 md:pr-6">
-      <% if @chugs.any? %>
-        <ul role="list" class="divide-y divide-gray-200">
-          <%= render @chugs %>
-        </ul>
-      <% else %>
-        Wat een geluk, jij bent de eerste die een <%= @chugtype.name.downcase %> mag gaan adten!
-      <% end %>
-    </aside>
-    <%= render 'shared/pagination/default' %>
+  <div class='md:col-span-8'>
+    <% if @chugs_all_newest.count > 0 %>
+      <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+        <div class="flex items-center border-b border-gray-200 justify-between px-4">
+          <nav class="-mb-px flex space-x-8">
+            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+              Per lid
+            </button>
+            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+              Nieuwste
+            </button>
+          </nav>
+        </div>
+      </div>
+      <div class="" data-tabs-target="panel">
+        <div class="md:pl-6">
+          <%= render 'chugs/list', chugs: @chugs_unique %>
+        </div>
+      </div>
+      <div class="hidden" data-tabs-target="panel">
+        <div class="md:pl-6">
+          <%= render 'chugs/list', chugs: @chugs_all_newest %>
+          <div class="py-6">
+            <%= render 'shared/pagination/default' %>
+          </div>
+        </div>
+      </div>
+    <% else %>
+      <div class="md:pl-6 py-6">
+        <p>
+          Wat een geluk, jij bent de eerste die een <%= @chugtype.name.downcase %> mag gaan adten!
+        </p>
+      </div>
+    <% end %>
   </div>
 </div>
 
-<style>
-
-</style>
+<!--<script>-->
+<!--    import { Tabs } from "tailwindcss-stimulus-components"-->
+<!--    application.register('tabs', Tabs)-->
+<!--</script>-->
