Created podium with medals

--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -53,7 +53,7 @@
       </div>
       <div class="" data-tabs-target="panel">
         <div class="md:pl-6">
-          <%= render 'chugs/list', chugs: @chugs_unique %>
+          <%= render 'chugs/podium_list', chugs: @chugs_unique %>
         </div>
       </div>
       <div class="hidden" data-tabs-target="panel">
