--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -51,7 +51,7 @@
           </nav>
         </div>
       </div>
-      <div class="" data-tabs-target="panel">
+      <div class="hidden" data-tabs-target="panel">
         <div class="md:pl-6">
           <%= render 'chugs/podium_list', chugs: @chugs_unique %>
         </div>
@@ -74,7 +74,7 @@
   </div>
 </div>
 
-<!--<script>-->
-<!--    import { Tabs } from "tailwindcss-stimulus-components"-->
-<!--    application.register('tabs', Tabs)-->
-<!--</script>-->
+<script>
+    import { Tabs } from "tailwindcss-stimulus-components"
+    application.register('tabs', Tabs)
+</script>
