--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -51,11 +51,12 @@
           </nav>
         </div>
       </div>
-      <div class="hidden" data-tabs-target="panel">
+      <div class="" data-tabs-target="panel">
         <div class="md:pl-6">
           <%= render 'chugs/podium_list', chugs: @chugs_unique %>
         </div>
       </div>
+
       <div class="hidden" data-tabs-target="panel">
         <div class="md:pl-6">
           <%= render 'chugs/list', chugs: @chugs_all_newest %>
