--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -39,29 +39,32 @@
 
   <div class='md:col-span-8'>
     <% if @chugs_all_newest.count > 0 %>
-      <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
-        <div class="flex items-center border-b border-gray-200 justify-between px-4">
-          <nav class="-mb-px flex space-x-8">
-            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-              Per lid
-            </button>
-            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-              Nieuwste
-            </button>
-          </nav>
+      <div data-controller="tabs select-tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+        <div>
+          <div class="ml-4">
+            <div class="border-b border-gray-200">
+              <nav class="-mb-px flex space-x-8">
+                <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                  Per lid
+                </button>
+                <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                  Meest recent
+                </button>
+              </nav>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="" data-tabs-target="panel">
-        <div class="md:pl-6">
-          <%= render 'chugs/podium_list', chugs: @chugs_unique %>
+        <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
+          <div class="md:pl-6">
+            <%= render 'chugs/podium_list', chugs: @chugs_unique %>
+          </div>
         </div>
-      </div>
-
-      <div class="hidden" data-tabs-target="panel">
-        <div class="md:pl-6">
-          <%= render 'chugs/list', chugs: @chugs_all_newest %>
-          <div class="py-6">
-            <%= render 'shared/pagination/default' %>
+        <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
+          <div class="md:pl-6">
+            <%= render 'chugs/list', chugs: @chugs_all_newest %>
+            <div class="py-6">
+              <%= render 'shared/pagination/default' %>
+            </div>
           </div>
         </div>
       </div>
@@ -74,8 +77,3 @@
     <% end %>
   </div>
 </div>
-
-<script>
-    import { Tabs } from "tailwindcss-stimulus-components"
-    application.register('tabs', Tabs)
-</script>
