--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -27,7 +27,7 @@
   <aside class="ml-6 py-6 md:col-span-4 md:pr-6">
     Ben jij de volgende die een <%= @chugtype.name.downcase %> van <%= @chugtype.amount %> ml in één keer leeg gaat
     trekken?
-    <div class="flex justify-center mt-5" style="margin-left: -2rem;">
+    <div class="flex justify-center mt-5 -ml-8">
       <%= button_to "Adt!", new_chug_path(@chugtype), method: :get, class: submit_classes %>
     </div>
     <% if @chugtype.description %>
